Closed Bug 464979 Opened 16 years ago Closed 16 years ago

TM: Crash [@ js_AbortRecording(JSContext*, char const*)]

Categories

(Core :: JavaScript Engine, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9.1b2

People

(Reporter: tchung, Unassigned)

Details

(Keywords: crash, topcrash, verified1.9.1)

Crash Data

This is showing up as #9 on the 1.9.1b2pre topcrash list.   I dont have any STR, just reporting what i see.

http://crash-stats.mozilla.com/?do_query=1&version=Firefox%3A3.1b2pre&query_search=signature&query_type=contains&query=&date=&range_value=1&range_unit=weeks


Stack Trace:

Frame  	Module  	Signature [Expand]  	Source
0 	js3250.dll 	js_AbortRecording 	js/src/jstracer.cpp:3660
1 	js3250.dll 	js_RecordLoopEdge 	js/src/jstracer.cpp:3084
2 	js3250.dll 	js_MonitorLoopEdge 	js/src/jstracer.cpp:3512
3 	js3250.dll 	js_Interpret 	js/src/jsinterp.cpp:3669
4 	js3250.dll 	js_Invoke 	js/src/jsinterp.cpp:1324
5 	js3250.dll 	js_InternalInvoke 	js/src/jsinterp.cpp:1381
6 	js3250.dll 	JS_CallFunctionValue 	js/src/jsapi.cpp:5242
7 	xul.dll 	nsJSContext::CallEventHandler 	dom/src/base/nsJSEnvironment.cpp:1979
8 	xul.dll 	nsGlobalWindow::RunTimeout 	dom/src/base/nsGlobalWindow.cpp:7674
9 	xul.dll 	nsGlobalWindow::TimerCallback 	dom/src/base/nsGlobalWindow.cpp:8006
10 	xul.dll 	nsTimerImpl::Fire 	xpcom/threads/nsTimerImpl.cpp:420
11 	xul.dll 	nsTimerEvent::Run 	xpcom/threads/nsTimerImpl.cpp:512
12 	xul.dll 	nsThread::ProcessNextEvent 	xpcom/threads/nsThread.cpp:510
13 	xul.dll 	nsBaseAppShell::Run 	widget/src/xpwidgets/nsBaseAppShell.cpp:170
14 	nspr4.dll 	PR_GetEnv 	
15 	firefox.exe 	wmain 	toolkit/xre/nsWindowsWMain.cpp:87
16 	firefox.exe 	firefox.exe@0x2197 	
17 	kernel32.dll 	kernel32.dll@0x17066
Flags: blocking1.9.1?
Keywords: crash, topcrash
Summary: Crash @js_AbortRecording(JSContext*, char const*) → TM: Crash @js_AbortRecording(JSContext*, char const*)
Summary: TM: Crash @js_AbortRecording(JSContext*, char const*) → TM: Crash [@ js_AbortRecording(JSContext*, char const*)]
bug 463829 is listed as topcrash #6 on the same list.  A possible two birds with one stone fix?
Priority: -- → P1
Target Milestone: --- → mozilla1.9.1b2
marking blocking 1.9.1b2.
Flags: blocking1.9.1? → blocking1.9.1+
Fixed in the merge pushed by vlad on Nov 18 14:11:14 2008 -0800:
http://hg.mozilla.org/mozilla-central/rev/e8ed5d4bf531
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
Flags: in-litmus-
No crashers reported on Socorro for the last three weeks on trunk and 1.9.1. I believe we can safely mark this bug as verified.
Status: RESOLVED → VERIFIED
Crash Signature: [@ js_AbortRecording(JSContext*, char const*)]
You need to log in before you can comment on or make changes to this bug.