Fixed branch traces being erroneously marked as dependent trees (bug 464979, r=gal).