js/src/trace-test.js
@@ -1884,6 +1884,15 @@ function testTrueShiftTrue() {
 testTrueShiftTrue.expected = "2,2,2,2,2";
 test(testTrueShiftTrue);
 
+// Test no assert or crash
+function testBug465261() {
+    for (let z = 0; z < 2; ++z) { for each (let x in [0, true, (void 0), 0, (void
+    0)]) { if(x){} } };
+    return true;
+}
+testBug465261.expected = true;
+test(testBug465261);
+
 // BEGIN MANDELBROT STUFF
 // XXXbz I would dearly like to wrap it up into a function to avoid polluting
 // the global scope, but the function ends up heavyweight, and then we lose on
